--- a/style.css
+++ b/style.css
@@ -4,6 +4,9 @@
   font-family: "Montserrat", sans-serif;
   --primary-color: #191825;
   --secondary-color: #865dff;
+  --tertiary-color: #E384FF;
+  --quaternary-color: #FFA3FD;
+
 }
 
 body {
@@ -18,24 +21,45 @@ body {
   margin: 0;
 }
 
-h1{
-    font-size: 5em;
+h1 {
+  font-size: 5em;
 }
 
-h3{
-    font-size: 3em;
-    margin-top: 20px;
+h2 {
+  font-size: 6em;
 }
 
-.mensagem{
-    font-size: 1.5em;
-    margin-top: 40px;
+h3 {
+  font-size: 3em;
+  margin-top: 20px;
 }
 
-.box{
-    border: 2px solid var(--secondary-color);
-    display: inline-block;
-    font-size: 4em;
-    padding: 10px;
-    margin:20px;
+.mensagem {
+  font-size: 1.5em;
+  margin-top: 40px;
+}
+
+.box {
+  border: 2px solid var(--secondary-color);
+  display: inline-block;
+  font-size: 4em;
+  padding: 10px;
+  margin: 20px;
+}
+
+.btn-playAgain {
+  padding: 8px 15px;
+  border: 0;
+  background-color: var(--secondary-color);
+  border-radius: 5px;
+  margin: 20px;
+  font-size: 24px;
+  font-weight: 500;
+  transition: ease 0.5s;
+}
+
+.btn-playAgain:hover{
+    opacity: 85%;
+    transition: ease 0.5s;
+    cursor: pointer;
 }
